finish user module endpoints
